--- a/source/frontend.html
+++ b/source/frontend.html
@@ -8,24 +8,6 @@
   <link href="css/style.min.css" rel="stylesheet" />
 </head>
 
-<body>
-  <nav class="header-nav">
-    <ul class="header-nav__list site-menu">
-      <li class="site-menu__item">
-        <a class="site-menu__link site-menu__link--index" href="index.html">Home</a>
-      </li>
-      <li class="site-menu__item">
-        <a class="site-menu__link site-menu__link--index" href="browser.html">Przeglądarka</a>
-      </li>
-      <li class="site-menu__item">
-        <a class="site-menu__link site-menu__link--index" href="library.html">Formularze</a>
-      </li>
-      <li class="site-menu__item site-menu__item--active first--active">
-        <span class="site-menu__link site-menu__link--index">Frontend CSS</span>
-      </li>
-    </ul>
-  </nav>
-  <script src="js/script.js"></script>
-</body>
+<body class="background-image"></body>
 
 </html>
