--- a/source/browser.html
+++ b/source/browser.html
@@ -11,21 +11,21 @@
 <body>
   <ul class="header-nav__list site-menu">
     <li class="site-menu__item">
-      <a class="site-menu__link site-menu__link--index" href="index.html">Home</a>
+      <a class="site-menu__link" href="index.html">Home</a>
     </li>
     <li class="site-menu__item">
-      <a class="site-menu__link site-menu__link--index" href="browser.html">Przeglądarka</a>
+      <a class="site-menu__link" href="browser.html">Przeglądarka</a>
     </li>
     <li class="site-menu__item">
-      <a class="site-menu__link site-menu__link--index" href="library.html">Formularze</a>
+      <a class="site-menu__link" href="library.html">Formularze</a>
     </li>
     <li class="site-menu__item">
-      <a class="site-menu__link site-menu__link--index" href="frontend.html">Frontend CSS</a>
+      <a class="site-menu__link" href="frontend.html">Frontend CSS</a>
     </li>
   </ul>
-  <button class="browser__button" onclick=addNumbersToTable()>Click</button>
+  <button class="browser__button">Click</button>
   <div class="browser__table"></div>
-  <script src="js/script.js"></script>
+  <script src="js/browser.js"></script>
 </body>
 
 </html>
